Fix footer-content on all pages. Remove wrong links. Add to standard aligners. Fix some responsive design on evaluation-page.

--- a/style/completedcourse.css
+++ b/style/completedcourse.css
@@ -20,11 +20,6 @@
   background-color: #d3d3d3;
 }
 
-.text-center {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
 .td3 {
 	width: 40px;
 	height: auto;
