--- a/style/mainstyle.css
+++ b/style/mainstyle.css
@@ -210,7 +210,7 @@ main {
 
 .footer>p {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   right: 10px;
   color: #fff;
 }
@@ -372,4 +372,10 @@ main {
 
 .margintop {
 	margin-top: 15px;
+}
+
+.text-center {
+  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
